Fixing OverFlow CSS

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,6 +34,7 @@ main {
     display: block;
     left: 0;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .clear-margin-padding {
